# feral-vision

./: .gitignore  .markdownlint.json  .mcp.json  AGENTS.md  ARCHITECTURE.md  CLAUDE.md  CONTEXT.md  README.md  dvc.yaml  model_registry.json  pyproject.toml  vscode
.codex/: config.toml
.codex/agents/: feedback-doc-summarizer.toml
.dvc/: config
.github/: CODEOWNERS
.github/workflows/: ci.yaml  codeql.yml  dependency-audit.yml  dev.yml  docs-build.yml  dvc-check.yml  dvc-check.yml.disabled  lint.yml  prod.yml  publish.yml  release.yml  security.yml  tests.yml  train.yaml  train.yml  type-check.yml
conf/: README.md  README_HYDRA.md  config.yaml
conf/augmentation/: README.md  standard.yaml
conf/data/: README.md  README_HYDRA_DATA.md  base.yaml  coco_train2017.yaml  local.yaml
conf/deploy/: mlflow.yaml
conf/experiment/: README_HYDRA_EXPERIMENT.md  debug.yaml
conf/gcp/: default.yaml
conf/inference/: README.md  default.yaml  local.yaml
conf/model/: README.md  README_HYDRA_MODEL.md  base.yaml  default.yaml  net.yaml  yolo11m_seg.yaml  yolo11n_seg.yaml  yolo11x_seg.yaml
conf/runs/: README.md  baseline.yaml  smoke.yaml
conf/schemas/: appearance.yaml
conf/tracking/: README.md  README_HYDRA_MLFLOW.md  base.yaml  mlflow.yaml
conf/train/: README.md  README_HYDRA_TRAIN.md  base.yaml  baseline.yaml  default.yaml  smoke.yaml
conf/train/loss_fn/: README.md  README_HYDRA_LOSS_FN.md  bce_with_logits.yaml  cross_entropy.yaml  l1.yaml  mse.yaml  nll.yaml
conf/train/optim/: README.md  README_HYDRA_OPTIM.md  adam.yaml  adamw.yaml  radam.yaml  rmsprop.yaml  sgd.yaml
conf/train/scheduler/: README.md  README_HYDRA_SCHEDULER.md  cosine.yaml  linear.yaml  plateau.yaml  step.yaml  warmrestarts.yaml
deploy/: Dockerfile  Dockerfile.gcp  cloudbuild.yaml
docker/: Dockerfile  USER_STEPS.md  entrypoint.sh  mlflow.Dockerfile
docs/: conf.py  index.rst  requirements.md
docs/agents/: configuration.md  data.md  development.md  domain.md  git.md  issue-tracker.md  mlops.md  project_instructions.md  triage-labels.md
docs/api/: config.rst  data.rst  inference.rst  models.rst  training.rst
docs/architecture/: program-flow.md
docs/guide/: dataset.rst  inference.rst  quickstart.rst  training.rst
docs/planning/: product-scope.md
mcp/: manifest.json
mcp/server/: main.py
scripts/: augment.py  cloud_preflight.py  container_train.sh  deploy_mlflow.py  gcp_train.sh  register_model.py  validate_ci.sh  validate_model_yaml.py
scripts/data/: acquire.sh  common.sh  process.sh  register.sh
src/feral_segmentor/: constants.py  main.py  pipeline.py  tasks.py  utils.py
src/feral_segmentor/config/: schema.py  store.py
src/feral_segmentor/data/: annotations.py  augmentations.py  coco_to_yolo.py  creator.py  dataset.py  fetch.py  schema_convert.py
src/feral_segmentor/inference/: postprocess.py  predictor.py
src/feral_segmentor/models/: ModelProperties.py  __init__.py  base.py  default.py  hub_fetch.py  register_model.py  registry.py  segmentation.py  source.py  student_interface.py  teacher.py
src/feral_segmentor/pipelines/: base_segmentation_pipeline.py  evaluate_segmentation_pipeline.py
src/feral_segmentor/training/: losses.py  metrics.py  optim.py  train.py  trainer.py
src/feral_vision/: constants.py  io_utils.py  main.py  tasks.py
src/feral_vision/config/: schema.py  (+1 more)
tests/: conftest.py  test_annotations.py  test_aug_chain.py  test_augmentations.py  test_augmentations_fixture.py  test_cloud_preflight.py  test_config_contracts.py  test_config_schema.py  test_container_train.py  test_dataset_loading.py  test_dvc_pipeline.py  test_hub_fetch.py  test_inference.py  test_losses.py  test_metrics.py  test_model.py  test_model_builder.py  test_model_registry.py  test_model_source.py  test_models.py  test_optim.py  test_pipeline.py  test_trainer.py
(+29 files in other folders)
