[project]
name = "feral-segmentor"
version = "0.1.0"
description = "Image segmentor optimized to detect feral cats on mobile devices."
authors = [
    { name = "Matthew Manning", email = "mattmanningclemson@gmail.com" }
]
requires-python = ">=3.12,<3.14"
dependencies = [
    "albumentations>=2.0",
    "dvc",
    "huggingface-hub>=1.20.1",
    "hydra-core",
    "mlflow",
    "omegaconf",
    "opencv-python>=4.13.0.92",
    "lightning>=2.0",
    "torch>=2.12.1",
    "pycocotools>=2.0",
    "ultralytics>=8.3",
]

[project.scripts]
feral-segmentor = "feral_segmentor.pipelines.base_segmentation_pipeline:main"

[build-system]
requires = ["uv_build>=0.11.7,<0.12.0"]
build-backend = "uv_build"

[tool.mypy]
python_version = "3.12"
ignore_missing_imports = true

[dependency-groups]
docs-sphinx = [
    "sphinx>=8.0",
    "furo>=2024.0",
    "sphinx-copybutton>=0.5",
]
dev = [
    "coverage>=7.14.2",
    "mypy>=1.10.0",
    "ruff>=0.9.0",
    "types-PyYAML>=6.0.0",
    "pytest>=9.1.1",
    "pytest-cov>=7.1.0",
]
