[project]
name = "feral-vision"
version = "0.1.0"
description = "Computer vision toolkit optimized to detect feral animals on mobile devices."
authors = [
    { name = "Matthew Manning", email = "mattmanningclemson@gmail.com" }
]
requires-python = ">=3.12,<3.14"
dependencies = [
    "albumentations>=2.0",
    "dvc",
    "huggingface-hub>=1.20.1",
    "hydra-core",
    "mlflow",
    "omegaconf",
    "opencv-python>=4.13.0.92",
    "torch>=2.12.1",
    "pycocotools>=2.0",
    "ultralytics>=8.3",
    "mcp>=1.0",
]

[build-system]
requires = ["uv_build>=0.11.7,<0.12.0"]
build-backend = "uv_build"

[tool.mypy]
python_version = "3.12"
ignore_missing_imports = true
# Pre-existing errors tracked separately; CI enforces no regressions on new code.
exclude = [
    "src/feral_vision/data/creator\\.py",
]

[tool.pytest.ini_options]
addopts = "--ignore=tests/test_train_stage.py --ignore=tests/test_data_config.py"

[tool.commitizen]
name = "cz_conventional_commits"
version_provider = "pep621"

[dependency-groups]
docs-sphinx = [
    "sphinx>=8.0",
    "furo>=2024.0",
    "sphinx-copybutton>=0.5",
]
dev = [
    "commitizen>=4.11.1",
    "coverage>=7.14.2",
    "mypy>=1.10.0",
    "ruff>=0.9.0",
    "types-PyYAML>=6.0.0",
    "pytest>=9.1.1",
    "pytest-cov>=7.1.0",
    "furo>=2025.12.19",
    "dvc-gs>=3.1.0",
    "dvc>=3.67.1",
    "acquire>=3.22",
    "sphinx>=9.1.0",
]
